--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -121,7 +121,7 @@ if (!doNotTrack) {
 
 <h2 id="what-is-greenfield">What is Greenfield?</h2>
 
-<p>Greenfield is in a essence an fully fledged Linux Wayland compositor running entirely in a user&rsquo;s browser. It can use WebSockets to interface
+<p>Greenfield is in essence a fully fledged Linux Wayland compositor running entirely in a user&rsquo;s browser. It can use WebSockets to interface
 with remotely running applications, or it can use WebWorkers to run applications directly in a user&rsquo;s browser.</p>
 
 <h2 id="how-is-greenfield-different-compared-to-existing-solutions-like-vnc-or-rdp">How is Greenfield different compared to existing solutions like VNC or RDP?</h2>
