--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@ if (!doNotTrack) {
                     <img alt="Baseline" height="48" src="/img/cloud-rainbow.svg" width="100">
                  </figure>
                 <h3>Ubiquitous computing</h3>
-                <p>Greenfield is nothing less than world's the first true cloud desktop. A login. A browser. That's all you need to access all of your apps and data. Any device. Anytime. Anywhere.</p>
+                <p>Greenfield is nothing less than the world's first true cloud desktop. A login. A browser. That's all you need to access all of your apps and data. Any device. Anytime. Anywhere.</p>
             </div>
             <div class="col col-4 item">
                 <figure>
